feat: singolo responsive

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         </div>
     </header>
 
+    <div class="alternative-header">
+        <div class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="singolo"><h1>SINGOLO<span class="star">*</span></h1></div>
+    </div>
+
     <div class="line1"></div>
 
     <section id="slider">
@@ -36,11 +45,11 @@
         <div class="encloser">
             <div class="hide">
 
-                <div class="slider__wrapper" style="left: 0px">
-                    <div class="slider-1"><img src="assets/Slide-2.png"></div>
+                <div class="slider__wrapper">
+                    <div class="slider-1"><img src="assets/Slide-2.png" class="slider-image"></div>
                 </div>
 
-                <div class="slider__wrapper" style="left: 1020px">
+                <div class="slider__wrapper">
                     <div class="slider-2">
                         <div class="iphone vertical">
                             <div class="camera"></div>
@@ -67,8 +76,8 @@
                     </div>
                 </div>
 
-                <div class="slider__wrapper" style="left: 2040px">
-                    <div class="slider-3"><img src="assets/Slide-2.png"></div>
+                <div class="slider__wrapper">
+                    <div class="slider-3"><img src="assets/Slide-2.png" class="slider-image"></div>
                 </div>
 
             </div>
@@ -169,10 +178,10 @@
             <div class="img"><img src="assets/image6.png"></div>
             <div class="img"><img src="assets/image7.png"></div>
             <div class="img"><img src="assets/image8.png"></div>
-            <div class="img"><img src="assets/image9.png"></div>
-            <div class="img"><img src="assets/image10.png"></div>
-            <div class="img"><img src="assets/image11.png"></div>
-            <div class="img"><img src="assets/image12.png"></div>
+            <div class="img extra"><img src="assets/image9.png"></div>
+            <div class="img extra"><img src="assets/image10.png"></div>
+            <div class="img extra"><img src="assets/image11.png"></div>
+            <div class="img extra"><img src="assets/image12.png"></div>
         </figure>
     </section>
 
@@ -185,7 +194,7 @@
         </article>
 
         <div class="portrait">
-            <div><img src="assets/port1.png">
+            <div><img src="assets/port1.png" class="avatar">
                 <h3>Adam Jensen</h3>
                 <p><span class="word_space">Quisque luctus, quam eget molestie commodo, lacus purus</span> cursus purus, nec rutrum tellus dolor id lorem.</p>
                 <div class="social_media">
@@ -196,7 +205,7 @@
                 </div>
             </div>
 
-            <div><img src="assets/port2.png">
+            <div><img src="assets/port2.png" class="avatar">
                 <h3>Desmond Miles</h3>
                 <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
                 <div class="social_media">
@@ -207,7 +216,7 @@
                 </div>
             </div>
 
-            <div><img src="assets/port3.png">
+            <div><img src="assets/port3.png" class="avatar">
                 <h3>Scolara Visari</h3>
                 <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
                 <div class="social_media">
