feat: add Burger menu

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Test</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
 </head>
@@ -11,6 +12,23 @@
         <p class="subject">eklvmlekvmle</p>
         <p class="description">elrvkmerlkv</p>
         <button>Ok</button>
+    </div>
+    <div class="ham-menu">
+        <div class="ham-logo">
+            <div class="burger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="singolo"><h1>SINGOLO<span class="star">*</span></h1></div>
+        </div>
+        <div class="bar-wrapper">
+                <div class="bar"><a href="#slider" class="selected">HOME</a></div>
+                <div class="bar"><a href="#our_services">SERVICES</a></div>
+                <div class="bar"><a href="#portfolio">PORTFOLIO</a></div>
+                <div class="bar"><a href="#aboutus">ABOUT</a></div>
+                <div class="bar"><a href="#get-a-quote">CONTACT</a></div>
+        </div>
     </div>
     <div class="fade" style="opacity: 1">
     <header>
@@ -27,7 +45,7 @@
     </header>
 
     <div class="alternative-header">
-        <div class="burger">
+        <div class="burger" id="ham-open">
             <div></div>
             <div></div>
             <div></div>
