feat: final remarks

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="popup" style="display: none">
         <p>The letter was sent</p>
-        <p class="subject">eklvmlekvmle</p>
-        <p class="description">elrvkmerlkv</p>
+        <p class="subject"></p>
+        <p class="description"></p>
         <button>Ok</button>
     </div>
     <div class="ham-menu">
