feat: fix issue

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p class="description"></p>
         <button>Ok</button>
     </div>
-    <div class="ham-menu">
+    <div class="ham-menu" style="display: none">
         <div class="ham-logo">
             <div class="burger">
                 <div></div>
